#------------------------------------------------------------------------------
# CMake file for Mutiverse Tests
#
# Copyright (c) 2016 The Multiverse developers
# Distributed under the MIT/X11 software license, see the accompanying
# file COPYING or http://www.opensource.org/licenses/mit-license.php.

add_subdirectory(dbp-client)